create github pages

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -88,7 +88,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">
                     <a href="index.html#features13-1g">Tobii Pro X3-120</a></h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">Here you will find shorter instructions on how to set up the device and how to operate with the software Tobii Pro Lab 64<br>-All images can be zoomed in-</p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">Here you will find shorter instructions on how to set up the device and how to operate with the software Tobii Pro Lab&nbsp;<br>-All images can be zoomed in-</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="index.html#step3-a">How to set it up</a>  
                     <a class="btn btn-md btn-secondary display-4" href="index.html#toggle1-h">How to use Tobii Pro Lab</a></div>
             </div>
